--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -2,30 +2,236 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:16.909980Z",
+     "start_time": "2020-03-28T15:33:16.889253Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# default_exp core"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:17.150428Z",
+     "start_time": "2020-03-28T15:33:17.129920Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# NBDev template\n",
     "\n",
     "> API details."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:17.503711Z",
+     "start_time": "2020-03-28T15:33:17.477726Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:17.704890Z",
+     "start_time": "2020-03-28T15:33:17.685413Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:17.897169Z",
+     "start_time": "2020-03-28T15:33:17.870621Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def say_hello2(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello2 {to}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:18.923837Z",
+     "start_time": "2020-03-28T15:33:18.899286Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class HelloSayer:\n",
+    "    \"Say hello to `to` using `say_hello`\"\n",
+    "    def __init__(self, to): self.to = to\n",
+    "    def say(self): say_hello(self.to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:19.446922Z",
+     "start_time": "2020-03-28T15:33:19.428771Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Sylvain!'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"Sylvain\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:33:20.077323Z",
+     "start_time": "2020-03-28T15:33:20.050718Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display,SVG\n",
+    "display(SVG('<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:37:39.298974Z",
+     "start_time": "2020-03-28T15:37:39.280017Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "assert say_hello(\"Jeremy\")==\"Hello Jeremy!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:37:39.821648Z",
+     "start_time": "2020-03-28T15:37:39.803253Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "o = HelloSayer(\"Alexis\")\n",
+    "o.say()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:37:40.061493Z",
+     "start_time": "2020-03-28T15:37:40.043670Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "o.say()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:37:40.279905Z",
+     "start_time": "2020-03-28T15:37:40.246341Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbdev.export import notebook2script\n",
+    "notebook2script()"
    ]
   },
   {
@@ -41,6 +247,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
