--- a/index.ipynb
+++ b/index.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:34:16.075565Z",
+     "start_time": "2020-03-28T15:34:16.055892Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from nbdev_template.core import *"
    ]
   },
   {
@@ -56,22 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-28T15:34:17.409601Z",
+     "start_time": "2020-03-28T15:34:17.391488Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello2 Sylvain!'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1+1"
+    "say_hello2(\"Sylvain\")"
    ]
   },
   {
@@ -87,6 +108,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
